# BiodiversityTools

./: .gitignore  CMakeLists.txt  README.md
ConsoleApps/: CMakeLists.txt
ConsoleApps/BFT/: BDIForRegions.cpp  BDIForRegions.h  BDIUtils.cpp  BDIUtils.h  BFT.cpp  CMakeLists.txt
ConsoleApps/BenefitsCBA/: BenefitsCBA.cpp  CMakeLists.txt
ConsoleApps/CalcEHA/: CMakeLists.txt  CalcEHA.cpp
ConsoleApps/CompositionalChange/: CMakeLists.txt
ConsoleApps/ContextCBA/: CMakeLists.txt  ContextCBA.cpp
ConsoleApps/ContinuousMBV/: CMakeLists.txt  ContinuousMBV.cpp
ConsoleApps/CreateCBAPetals/: CMakeLists.txt  CreateCBAPetals.cpp
ConsoleApps/CreateCBASearchWindow/: CMakeLists.txt  CreateCBASearchWindow.cpp  CreateCBASearchWindow.vcxproj  CreateCBASearchWindow.vcxproj.filters
ConsoleApps/CreateCBASegments/: CMakeLists.txt  CreateCBASegments.cpp
ConsoleApps/LinksCompleteSampling/: CMakeLists.txt  LinksCompleteSampling.cpp
ConsoleApps/LinksCompleteSamplingLDE/: CMakeLists.txt  LinksCompleteSamplingLDE.cpp
ConsoleApps/LinksRandomSampling/: CMakeLists.txt  LinksRandomSampling.cpp
ConsoleApps/OccupancyCBA/: CMakeLists.txt  OccupancyCBA.cpp
ConsoleApps/REMP/: CMakeLists.txt  MCalcs.cpp  MCalcs.h  REMP.cpp
ConsoleApps/RegionHistograms/: CMakeLists.txt  RegionHistograms.cpp
ConsoleApps/Uniqueness/: CMakeLists.txt  Uniqueness.cpp
Examples/: BenefitsCBA_Conserve_Example.par  BenefitsCBA_Restore_Example.par  CalcEHA_Example.par  ContextCBA_Example.par  ContextCBA_With_Factor_Example.par  LinksCompleteSampling_Example.par  LinksRandomSampling_Example.par  REMP_Example.par
Examples/Data/: cost.flt  cost.flt.xml  factor.flt  habitat.flt  mbv.flt  mbv.prj  perm.flt  perm.flt.xml  perm.hdr
Examples/Petals/: petals101_11_25_lookup.txt  petals101_11_25_petals.asc  petals101_11_25_points.asc  petals101_11_25_translate.txt  petals101_11_25_zoneFactors.txt  petals21_5_4_lookup.txt  petals21_5_4_petals.asc  petals21_5_4_petals.asc.vat.dbf  petals21_5_4_points.asc  petals21_5_4_translate.txt  petals41_7_25_lookup.txt  petals41_7_25_petals.asc  petals41_7_25_petals.asc.vat.dbf  petals41_7_25_points.asc  petals41_7_25_translate.txt  petals41_7_25_zoneFactors.txt  petals61_9_25_lookup.txt  petals61_9_25_petals.asc  petals61_9_25_points.asc  petals61_9_25_translate.txt  petals61_9_25_zoneFactors.txt
FileUtilsLib/: CMakeLists.txt  FileUtils.cpp  FileUtils.h  FileUtilsLib.cpp  FileUtilsLib.h  FltGridFile.cpp  FltGridFile.h  MessageUtils.cpp  MessageUtils.h  ParameterFile.cpp  ParameterFile.h  Profiler.cpp  Profiler.h  gstream.cpp  gstream.h
SpatialContextLib/: Benefits_CBA.cpp  Benefits_CBA.cu  Benefits_CBA.h  CMakeLists.txt  Common.cu  Common.cuh  Context_CBA.cpp  Context_CBA.cu  Context_CBA.h  ContinuousMBV.cpp  ContinuousMBV.cu  ContinuousMBV.h  EHA_CBA.cpp  EHA_CBA.cu  EHA_CBA.h  Factor_CBA.cu  Occupancy_CBA.cpp  Occupancy_CBA.cu  Occupancy_CBA.h  OldPetals.cpp  Parameters.h  Petals.cpp  Petals.h  SpatialContextLib.cpp  SpatialContextLib.h  Uniqueness.cpp  Uniqueness.cu  Uniqueness.h
SpatialLinksLib/: CMakeLists.txt  LinksCellNodeGridHeap.h  LinksCompleteSampling.cpp  LinksCompleteSampling.h  LinksCompleteSamplingAltDstHab.cpp  LinksCompleteSamplingAltDstHab.h  LinksCompleteSamplingLDE.cpp  LinksParams.h  LinksRandomSampling.cpp  LinksRandomSampling.h  SpatialLinksLib.cpp  SpatialLinksLib.h
