# Add subdirectory for each console application
add_subdirectory(BenefitsCBA)
add_subdirectory(BFT)
add_subdirectory(CalcEHA)
add_subdirectory(ContextCBA)
add_subdirectory(ContinuousMBV)
add_subdirectory(CreateCBAPetals)
add_subdirectory(CreateCBASegments)
add_subdirectory(LinksCompleteSampling)
add_subdirectory(LinksCompleteSamplingLDE)
add_subdirectory(LinksRandomSampling)
add_subdirectory(OccupancyCBA)
add_subdirectory(REMP)
